<resources>
    <string name="app_name">FinalSQLite</string>

    <string name="action_add">Adicionar</string>
    <string name="txt_titulo">Titulo:</string>
    <string name="txt_prioridade">Prioridade:</string>
    <string name="txt_descricao">Descrição:</string>
    <string name="txt_cor">Cor:</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_ok">OK</string>
    <string name="action_sobre">Sobre</string>
    <string name="desenvolvedora">Desenvolvedora: </string>
    <string name="nome_dev">Caroline Vitória</string>
    <string name="dev">Desenvolvedora</string>
    <string name="direitos">Todos os direitos reservados.</string>
    <string name="curso">Estudante de Tecnologia em Análise e Desenvolvimento de Sistemas</string>
    <string name="idade">20 anos</string>
    <string name="sobre_app">Este aplicativo é o Trabalho Final da disciplina de Desenvolvimento para Dispositivos Móveis.</string>
    <string name="version">7.1.3</string>
    <string-array name="cores">
        <item>Vermelho</item>
        <item>Laranja</item>
        <item>Amarelo</item>
        <item>Verde</item>
        <item>Azul</item>
        <item>Roxo</item>
    </string-array>
</resources>